# retail-portfolio-optimization

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.py
.cursor/rules/: data-loading-extensible.mdc  multi-agent-roles.mdc  retail-portfolio-project.mdc
.cursor/skills/agent-manager-retail/: SKILL.md
.cursor/skills/coding-python-retail/: SKILL.md
.cursor/skills/git-github-retail/: SKILL.md
.cursor/skills/research-papers-retail/: SKILL.md
.cursor/skills/validation-testing-retail/: SKILL.md
data/: README.md
figures/: brzezcek_demo_summary.md
research/papers/: Brzezcek_2020_summary_and_algorithms.md  README.md
scripts/: visualize_brzezcek_demo.py
src/retail_portfolio/: __init__.py  brzezcek_portfolio.py  forecasters.py
src/retail_portfolio/data/: __init__.py  forecast_inputs.py  kaggle_retail_insights.py
src/retail_portfolio/spark/: README.md  __init__.py  data_prep.py  distributed.py  solver.py
src/retail_portfolio/viz/: __init__.py  brzezcek_demo.py
tests/: test_brzezcek_portfolio.py  test_forecast_inputs.py  test_forecasters.py  test_kaggle_retail_insights.py  test_spark_distributed.py  test_spark_solver.py  test_viz_smoke.py
tests/fixtures/: retail_insights_sample.csv
